// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClockIn should render in idle-state 1`] = `
<ClockIn
  running={false}
  startEntry={[Function]}
  stopEntry={[Function]}
>
  <styled.div>
    <div
      className="frIlRZ"
    >
      <styled.button
        data-t-target="ClockInButton"
        error={false}
        onClick={[Function]}
        success={true}
      >
        <button
          className="hvWpBV"
          data-t-target="ClockInButton"
          onClick={[Function]}
        >
          Clock In
        </button>
      </styled.button>
    </div>
  </styled.div>
</ClockIn>
`;

exports[`ClockIn should render in running-state 1`] = `
<ClockIn
  running={true}
  startEntry={[Function]}
  stopEntry={[Function]}
>
  <styled.div>
    <div
      className="frIlRZ"
    >
      <styled.button
        data-t-target="ClockInButton"
        error={true}
        onClick={[Function]}
        success={false}
      >
        <button
          className="etMWMq"
          data-t-target="ClockInButton"
          onClick={[Function]}
        >
          Clock Out
        </button>
      </styled.button>
    </div>
  </styled.div>
</ClockIn>
`;
